test/negative/202_if_no_else.err
202_if_no_else.fx:2:9: error: if() expression of non-void type has no 'else' branch

1 errors occured during type checking.
